# Grafkit2

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.MD  TODO
include/: stb_image.h
include/grafkit/core/: ErrorCode.h  Renderer.h  ShaderStage.h  exceptions.h  input.h  system.h  window.h
include/grafkit/render/: BlurMaterial.hpp  Camera.hpp  Light.hpp  Material.hpp  Model.hpp  PBRMaterial.hpp
include/grafkit/threadpool/: AlignedMalloc.h  BoundedMpmcQueue.h  MemoryPoolAllocator.h  TaskScheduler.h  ThreadPlatform.h  ThreadPool.h
src/: CmakeLists.txt
src/editor/: CMakeLists.txt
src/grafkit/: CmakeLists.txt  config.h.in
src/grafkit/core/: Renderer.cpp  exceptions.cpp  system.cpp  window.cpp
src/grafkit/render/: BlurMaterial.cpp  Camera.cpp  Light.cpp  Material.cpp  Model.cpp
src/grafkit/shaders/: BlurXPS.hlsl  BlurYPS.hlsl  DefaultPS.hlsl  EnvMap.hlsl  FullScreenTriangleVS.hlsl  Rectangle.hlsl  Simple.json  SineDist.hlsl
src/grafkit/threadpool/: AlignedMalloc.c  MemoryPoolAllocator.cpp  TaskScheduler.cpp  ThreadPool.cpp
src/player/: CmakeLists.txt  FWZ.rc  afxres.h  application.cpp  application.h  fwzSetup.cpp  fwzSetup.h  main.cpp  resource.h  stdafx.h
tests/: CmakeLists.txt
tests/unittests/: CMakeLists.txt  main.cpp  test_memoryPool.cpp  test_pool.cpp  test_queue.cpp
thirdparties/: CMakeLists.txt  config.json  config.json.0  package-autobuild.cmake  package-config.cmake  vendor.py
tools/: format.bat
